test/files/neg/unicode-unterminated-quote.scala
class A {
  val x = \u0022